--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -17,3 +17,7 @@
 /* Top tool background of cross app */
 
 /* Left nav bar item background */
+
+/* Attr at data table */
+
+/* Style of button for action */
