--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -33,6 +33,20 @@
 
 @APP_LEFT_NAV_ITEM_HOVER_COLOR: #375A7C;
 
+/* Attr at data table */
+@DATA_TABLE_HEADER_BG: #CCE4F6;
+@DATA_TABLE_ODD_ROW_BG: #F2F2F2;
+@DATA_TABLE_EVEN_ROW_BG: #FFFFFF;
+@DATA_TABLE_ROW_HOVER: #E1F2FF;
+
+/* Style of button for action */
+@BUTTON_DISABLED_BG: #E3E3E3;
+@BUTTON_DISABLEd_TEXT_COLOR: #747474;
+@BUTTON_ENABLED_BG: #28A9EE;
+@BUTTON_ENABLED_TEXT_COLOR: #FFFFFF;
+@BUTTON_DANGER_BG: #E15A67;
+@BUTTON_HOVER_BG: #28A9EE;
+
 .crossLeftNavLeadFont() {
   font-size: 15px;
   color: #ffffff;
