--- a/app/styles/top_bar.css
+++ b/app/styles/top_bar.css
@@ -20,6 +20,10 @@
 
 /* Left nav bar item background */
 
+/* Attr at data table */
+
+/* Style of button for action */
+
 #top_bar {
   background: #323232;
 }
