Add detail page for instance
Optimize instance detail in detail_panel.
Add multi route for instance detail: overview, log, console, monitor

Change-Id: Ia5a82e00cae564b3e85139cbc120100cb3030b1a

--- a/app/scripts/dashboards/admin/instance/views/index.html
+++ b/app/scripts/dashboards/admin/instance/views/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
         <div class="gridStyle ui-view-container" ng-grid="gridOptions">
-            <div ui-view ng-init="detail_show='detail_hide'" class="detail-panel" ng-class={{"detail_show"}}></div>
+          <div ui-view ng-init="detail_show='detail_hide'" class="detail-panel" ng-class={{"detail_show"}} ng-style="{height: detailHeight, minHeight: 480, width: detailWidth}"></div>
         </div>
     </div>
 </script>
