--- a/app/styles/variables.less
+++ b/app/styles/variables.less
@@ -47,6 +47,10 @@
 @BUTTON_DANGER_BG: #E15A67;
 @BUTTON_HOVER_BG: #28A9EE;
 
+@LINK_COLOR: #269BD8;
+
+@ACTIVE_TEXT_COLOR: #FFFFFF;
+
 .crossLeftNavLeadFont() {
   font-size: 15px;
   color: #ffffff;
