--- a/app/styles/instances.less
+++ b/app/styles/instances.less
@@ -1,99 +1,5 @@
 @import "variables.less";
 
-.gridStyle {
-  border: none;
-  width: 100%;
-  height: 500px;
-
-  .ngCellText {
-     text-overflow: inherit;
-     text-align: center;
-     border: none;
-     &.unknwon {
-       background: url(../images/processing.gif) no-repeat center;
-    }
-  }
-  .ngHeaderSortColumn {
-    text-align: center;
-  }
-  .ngVerticalBarVisible {
-    background: none;
-  }
-
-  .enableClick {
-    color: #269BD8;
-    a:hover {
-      text-decoration: none;
-    }
-  }
-
-  .ngViewport {
-    height: auto !important;
-  }
-  .ngRow.even {
-    background: @DATA_TABLE_EVEN_ROW_BG;
-    &:hover {
-      background: @DATA_TABLE_ROW_HOVER;
-    }
-  }
-  .ngRow.odd {
-    background: @DATA_TABLE_ODD_ROW_BG;
-    &:hover {
-      background: @DATA_TABLE_ROW_HOVER;
-    }
-  }
-  .ngFooterPanel {
-    background-color: @DATA_TABLE_EVEN_ROW_BG;
-    border-top: none;
-    .pageCode {
-      width: 160px;
-      height: 25px;
-      float: right;
-      margin-left: 20px;
-      margin-top: 10px;
-      li {
-        list-style: none;
-        float: left;
-        display: block;
-        width: 20px;
-        height: 20px;
-        line-height: 20px;
-        text-align: center;
-        border-radius: 10px;
-        cursor: pointer;
-        &.pagetrue {
-          background-color: @BUTTON_ENABLED_BG;
-          color: #FFFFFF;
-        }
-        &.change-page {
-          border-radius: 0px;
-          &:hover {
-            background-color: @BUTTON_ENABLED_BG;
-            color: #FFFFFF;
-          }
-        }
-      }
-    }
-  }
-}
-
-.ngHeaderContainer {
-  background: @DATA_TABLE_HEADER_BG;
-}
-
-.ngRow.odd {
-  background: #E1F2FF;
-}
-.ngRow.odd:hover {
-  background: #FFFFFF;
-}
-
-#detail-container {
-  height: 100px;
-  width: 100px;
-  background: red;
-}
-
 ul {
     list-style: none;
     padding: 0;
@@ -171,43 +77,78 @@ ul {
   transform:translate3d(500px, 0, 0);
 }
 
-  .detail-panel.detail_hide{
-    display: none;
-  }
+.detail-panel.detail_hide{
+  display: none;
+}
 
-  .detail-panel.detail_show{
-    position: absolute;
-    z-index: 100;
-    width: 850px;
-    height: 480px;
-    left: 450px;
-    background: white;
-    line-height: 30px;
-    border: 1px solid #d4d4d4;
-    .detail_tab {
-      height: 30px; 
-      background: #E1F2FF;
-      li {
-        float: left;
-        height: 30px;
-        line-height: 30px;
-        padding-left: 3px;
-        padding-right: 3px;
-      }
-    }
-    .action_bar_in_detail {
+.detail-panel.detail_show{
+  position: absolute;
+  z-index: 100;
+  width: 850px;
+  left: 450px;
+  background: white;
+  line-height: 30px;
+  border: 1px solid #d4d4d4;
+  .detail_tab {
+    height: 30px; 
+    background: #E1F2FF;
+    li {
+      float: left;
       height: 30px;
-      line-height: 40px;
+      line-height: 30px;
+      &.active {
+        background: #FFFFFF;
+      }
+      a {
+        color: black;
+        display: block;
+        padding-left: 8px;
+        padding-right: 8px;
+        &:hover {
+          text-decoration: none;
+        }
+      }
     }
-    .detail_info 
-      .title {
-        height: 35px; 
-        background: #f3f3f3;
-      }
-      .detail_area {
-        margin: 5px 0px;
-      }
   }
+  .action_bar_in_detail {
+    height: 35px;
+    line-height: 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: #EAF5FD;
+    li {
+      height: 35px;
+      line-height: 35px;
+      float: left;
+      &.action_header {
+        padding-left: 20px;
+        width: 70px;
+        margin-right: 10px;
+        background: #CCE4F6;
+      }
+      a {
+        padding-left: 20px;
+        padding: 3px 2px;
+        margin-right: 10px;
+        cursor: pointer;
+        border-radius: 3px;
+        &:hover {
+          background: #29AAEE;
+          color: white;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+  .detail_info 
+    .title {
+      height: 35px; 
+      background: #f3f3f3;
+    }
+    .detail_area {
+      margin: 5px 0px;
+    }
+}
 
 .btn {
   padding: 3px 12px;
