--- a/app/scripts/dashboards/admin/instance/views/_detail_overview.html
+++ b/app/scripts/dashboards/admin/instance/views/_detail_overview.html
@@ -6,15 +6,51 @@
 </div>
 
 <div class='base_info detail_info'>
-  <div class='title'>Detail info</div>
+  <div class='detail_title'>Detail info</div>
   <div class='detail_area'>
-    <ul>
-        <li>Name: {{server_detail.name}}</li>
-        <li>Id: {{server_detail.id}}</li>
-    </ul>
+    <div class='item_name'>
+      <ul>
+        <li>Name</li>
+        <li>Id</li>
+        <li>Status</li>
+        <li>Host</li>
+        <li>Project</li>
+        <li>Fixed IP</li>
+        <li>Floating IP</li>
+      </ul>
+    </div>
+    <div class='space'></div>
+    <div class='item_value'>
+      <ul>
+        <li>{{server_detail.name}}</li>
+        <li>{{server_detail.id}}</li>
+        <li>{{server_detail.status}}</li>
+        <li>{{server_detail.hypervisor_hostname}}</li>
+        <li>{{server_detail.project}}</li>
+        <li><span class='ip-list' ng-repeat='ip in server_detail.fixed'>{{ip}}</span></li>
+        <li><span class='ip-list' ng-repeat='ip in server_detail.floating'>{{ip}}</span></li>
+      </ul>
+    </div>
+    <div class='clear'></div>
   </div>
 </div>
 
 <div class='other_info detail_info'>
-  <div class='title'>Flavor Info</div>
+  <div class='detail_title'>Flavor Info</div>
+  <div class='detail_area'>
+    <div class='item_name'>
+      <ul>
+        <li>VCPUS</li>
+        <li>RAM</li>
+      </ul>
+    </div>
+    <div class='space'></div>
+    <div class='item_value'>
+      <ul>
+        <li>{{server_detail.vcpus}}</li>
+        <li>{{server_detail.ram}}</li>
+      </ul>
+    </div>
+    <div class='clear'></div>
+  </div>
 </div>
