--- a/app/scripts/dashboards/admin/instance/views/detail.html
+++ b/app/scripts/dashboards/admin/instance/views/detail.html
@@ -5,5 +5,5 @@
       </ul>
     </div>
     <div ui-view></div>
-    <button ng-click='panle_close()'>Close</button>
+    <div ng-click='panle_close()' class='close-detail'>&nbsp X</div>
 </div>
